[package]
name = "pessimistic-proof-openvm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = { workspace = true }
pessimistic-proof = { path = "../pessimistic-proof" }
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha", features = [
    "std",
] }
openvm-platform = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha" }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha" }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha", features = [
    "k256",
] }
openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha", features = [
    "export-intrinsics",
] }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v0.1.0-alpha", features = [
    "bn254",
] }

# [features]
# std = ["openvm/std"]
