[package]
name = "pessimistic-proof-test-suite"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ppgen-sp1"
path = "src/bin/ppgen-sp1.rs"

[dependencies]
agglayer-types = { path = "../agglayer-types" }
pessimistic-proof = { path = "../pessimistic-proof" }
base64.workspace = true
bincode.workspace = true
clap.workspace = true
ethers-signers.workspace = true
reth-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# sp1-sdk.workspace = true
# sp1-core-machine.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
rand.workspace = true
hex.workspace = true
hex-literal = "0.4"
tracing.workspace = true
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
regex = "1.11"
