[package]
name = "pp-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
pp-pico-host = { path = "./pp-pico-host" }
pp-pico-guest = { path = "./pp-pico-guest" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
