[workspace]
resolver = "2"
members = [
    ".",
    "methods",
    "methods/pp-risc0-guest",
]

[workspace.package]
name = "pp-risc0"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package]
name = "pp-risc0"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
cuda = ["risc0-zkvm/cuda"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "ppgen"
path = "src/main.rs"

[dependencies]
base64 = "0.22.0"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive", "env"] }
ethers-signers = "2.0.14"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.7"
lazy_static = "1.5.0"
anyhow = "1.0.94"
rand = "0.8.5"
hex-literal = "0.4"
hex = "0.4.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
regex = "1.11"
serde_cbor = "0.11.2"

agglayer-primitives = { path = "../agglayer-primitives" }
agglayer-types = { path = "../agglayer-types"}
pessimistic-proof = { path = "../pessimistic-proof" }
pessimistic-proof-core = { path = "../pessimistic-proof-core" }
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }

risc0-zkvm = { version = "1.2.5", default-features = false, features = ["std", "unstable", "cuda"] }
methods = { path = "methods" }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

