[workspace]
resolver = "2"
members = [
    "pp-sp1-host",
    "pp-sp1-guest"
]

[workspace.package]
name = "pp-sp1"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
agglayer-primitives = { path = "../agglayer-primitives" }
agglayer-types = { path = "../agglayer-types", features = ["testutils"] }
pessimistic-proof = { path = "../pessimistic-proof" }
pessimistic-proof-core = { path = "../pessimistic-proof-core" }
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }

base64 = "0.22.0"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive", "env"] }
ethers-signers = "2.0.14"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.7"
lazy_static = "1.5.0"
anyhow = "1.0.94"
rand = "0.8.5"
hex-literal = "0.4"
hex = "0.4.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
regex = "1.11"
serde_cbor = "0.11.2"
# Test dependencies
fail = { version = "0.5.1", default-features = false }
insta = { git = "https://github.com/freyskeyd/insta", branch = "chore/updating-deps-to-avoid-serialize-error", features = [
    "toml",
    "yaml",
] }
mockall = "0.13.1"
rstest = "0.22.0"
test-log = "0.2.16"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
