[package]
name = "program-openvm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.3"
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
pessimistic-proof-core = { path = "../pessimistic-proof-core", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", features = ["std"] }

[features]
std = ["openvm/std"]