[package]
name = "test-openvm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ppgen"
path = "src/bin/ppgen.rs"

[dependencies]
agglayer-primitives.workspace = true
agglayer-types = { path = "../agglayer-types", features = ["testutils"] }
pessimistic-proof = { path = "../pessimistic-proof" }
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }
pessimistic-proof-core = { path = "../pessimistic-proof-core", default-features = false }

base64.workspace = true
bincode.workspace = true
clap.workspace = true
ethers-signers.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
rand.workspace = true
hex-literal = "0.4"
hex.workspace = true
tracing.workspace = true
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
regex = "1.11"
eyre = "0.6.12"

openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", features = [
    "std",
] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0-rc.0", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0-rc.0", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
openvm-keccak256-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1", default-features = false }

[dev-dependencies]
rstest.workspace = true
tracing.workspace = true
