[package]
name = "pessimistic-proof-test-suite"
version.workspace = true
edition.workspace = true

[dependencies]
agglayer-primitives.workspace = true
agglayer-types = { path = "../agglayer-types", features = ["testutils"] }
pessimistic-proof = { path = "../pessimistic-proof" }

base64.workspace = true
bincode.workspace = true
clap.workspace = true
ethers-signers.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
rand.workspace = true
hex-literal = "0.4"
hex.workspace = true
tracing.workspace = true
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
regex = "1.11"

[dev-dependencies]
rstest.workspace = true
tracing.workspace = true
