[package]
name = "pp-pico-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
pessimistic-proof-core = { path = "../../pessimistic-proof-core", default-features = false }
pico-sdk = { git = "https://github.com/brevis-network/pico" }
serde = { version = "1.0.205", features = ["derive"] }