[package]
name = "pp-pico-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode.workspace = true
pessimistic-proof-core.workspace = true
pico-sdk = { git = "https://github.com/brevis-network/pico" }
serde.workspace = true

[patch.crates-io.tiny-keccak]
git = "https://github.com/brevis-network/tiny-keccak"
branch = "patch-v1.0.0"
features = ["keccak"] 