[package]
name = "pp-pico-host"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ppgen"
path = "src/bin/ppgen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
agglayer-primitives.workspace = true
agglayer-types.workspace = true
pessimistic-proof.workspace = true
pessimistic-proof-core.workspace = true
pessimistic-proof-test-suite.workspace = true

base64.workspace = true
bincode.workspace = true
clap.workspace = true
ethers-signers.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
rand.workspace = true
hex-literal = "0.4"
hex.workspace = true
tracing.workspace = true
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
regex = "1.11"

pico-sdk = { git = "https://github.com/brevis-network/pico", features = ["prover"] }

[dev-dependencies]
rstest.workspace = true
tracing.workspace = true
