[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2", default-features = false, features = ['unstable'] }

[package.metadata.risc0]
methods = ["pp-risc0-guest"]

[patch.crates-io]
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }