[package]
name = "risc0-agglayer-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
risc0-agglayer-primitives = { path = "../risc0-agglayer-primitives" }
risc0-pessimistic-proof = { path = "../risc0-pessimistic-proof" }

ethers = { workspace = true, optional = true }
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
bincode.workspace = true
rand.workspace = true

[dev-dependencies]
risc0-agglayer-types = { path = ".", features = ["testutils"] }

[features]
default = []
testutils = ["dep:ethers"]
