[package]
name = "risc0-pessimistic-proof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
risc0-agglayer-primitives = { path = "../risc0-agglayer-primitives" }

bincode.workspace = true
hex.workspace = true
hex-literal = "0.4"
tracing.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde_with = { version = "3" }
thiserror.workspace = true
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rs_merkle = { version = "1.4", default-features = false }
rand = "0.8.5"

[features]
default = []
testutils = ["rand"]

[patch.crates-io]
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", rev = "7ff2b8465891d1cbb55a69e553e05d369ce41d72" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
