[package]
name = "program_risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.4", default-features = false, features = ['std'] }
bincode = "1.3.3"
pessimistic-proof-core = { path = "../../../pessimistic-proof-core", default-features = false }
serde = { version = "1.0.205", features = ["derive"] }
