[package]
name = "pp-risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std', 'unstable'] }
bincode = "1.3.3"
pessimistic-proof-core = { path = "../../../pessimistic-proof-core", default-features = false }
serde = { version = "1.0.205", features = ["derive"] }

# [patch.crates-io]
# tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", rev = "7ff2b8465891d1cbb55a69e553e05d369ce41d72" }
# sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
