[package]
name = "pp-risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "2.0.0", default-features = false, features = ['std', 'unstable'] }
bincode = "1.3.3"
pessimistic-proof-core = { path = "../../../pessimistic-proof-core", default-features = false }
serde = { version = "1.0.205", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
